--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+client_secret.json
+gmail-importer.cache
+gmail-importer.log
+gmail-importer_me.sh
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
