--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ client_secret.json
 gmail-importer.cache
 gmail-importer.log
 gmail-importer_me.sh
+gmail-importer_me.bat
+.credentials
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
